update!: Port to 1.19.3 (#883)
Port to 1.19.3 and cleanup data and recipe packages

BREAKING CHANGE: Update to new version; Forge and Vanilla have had numerous breaking changes

closes #831

merged from #883